--- a/tasks/task4.ipynb
+++ b/tasks/task4.ipynb
@@ -33,6 +33,17 @@
     "<img src=\"https://imgtr.ee/images/2023/10/02/979b09462432ad8113c07f8701ec17dc.jpeg\" style=\"width: 90%; height: auto; margin-left: 5%;\"/>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
