--- a/exam/task11.ipynb
+++ b/exam/task11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -268,15 +268,13 @@
     "  name = input('Enter name of the task > ')\n",
     "  # empty string handle\n",
     "  while name.strip() == '':\n",
-    "    print('Wrong input, try again > ')\n",
-    "    name = input()\n",
+    "    name = input('Wrong input, try again > ')\n",
     "  \n",
     "  print('Enter description of the task.\\n\\t > ')\n",
     "  description = input()\n",
     "  # empty string handle\n",
     "  while description.strip() == '':\n",
-    "    print('Wrong input, try again > ')\n",
-    "    description = input()\n",
+    "    description = input('Wrong input, try again > ')\n",
     "  \n",
     "  print('Choose priority of the task by number:')\n",
     "  output_numbering = 1\n",
@@ -363,8 +361,8 @@
     "      current_task = Todolist.todos[change_task_index]\n",
     "      new_data = input(\"Enter new name > \")\n",
     "      while new_data.strip() == '':\n",
-    "        print(\"Wrong input, try again\")\n",
-    "        new_data = input(\" > \")\n",
+    "        print()\n",
+    "        new_data = input(\"Wrong input, try again > \")\n",
     "      current_task[field_name] = new_data\n",
     "\n",
     "      print(\"Task has been changed\")\n",
