--- a/exam/task11.ipynb
+++ b/exam/task11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,211 +13,184 @@
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n",
+      "6. Exit.\n",
       "Wrong input.\n",
-      "Todo list has been created, enter number for functions:\n",
       "1. Print list.\n",
       "2. Add new task.\n",
       "3. Delete task.\n",
-      "4. Change priority of the task.\n",
+      "4. Change task.\n",
       "5. Find task by name.\n",
-      "6. Change task.\n",
-      "7. Exit.\n",
-      "\t> \n"
+      "6. Exit.\n",
+      "Wrong input.\n",
+      "1. Print list.\n",
+      "2. Add new task.\n",
+      "3. Delete task.\n",
+      "4. Change task.\n",
+      "5. Find task by name.\n",
+      "6. Exit.\n",
+      "Wrong input.\n",
+      "1. Print list.\n",
+      "2. Add new task.\n",
+      "3. Delete task.\n",
+      "4. Change task.\n",
+      "5. Find task by name.\n",
+      "6. Exit.\n",
+      "Wrong input.\n",
+      "1. Print list.\n",
+      "2. Add new task.\n",
+      "3. Delete task.\n",
+      "4. Change task.\n",
+      "5. Find task by name.\n",
+      "6. Exit.\n",
+      "Wrong input.\n",
+      "1. Print list.\n",
+      "2. Add new task.\n",
+      "3. Delete task.\n",
+      "4. Change task.\n",
+      "5. Find task by name.\n",
+      "6. Exit.\n",
+      "Wrong input.\n",
+      "1. Print list.\n",
+      "2. Add new task.\n",
+      "3. Delete task.\n",
+      "4. Change task.\n",
+      "5. Find task by name.\n",
+      "6. Exit.\n"
      ]
     }
    ],
@@ -320,7 +293,7 @@
     "    try:\n",
     "      task_index = int(input(\"Choose task by number > \"))\n",
     "      task_index -= 1\n",
-    "      TodoList.delete_task(task_index)\n",
+    "      Todolist.delete_task(task_index)\n",
     "    except ValueError:\n",
     "      print(f\"Wrong input\")\n",
     "      \n",
